add scale optimization

--- a/image_geometrize_2.ipynb
+++ b/image_geometrize_2.ipynb
@@ -109,12 +109,13 @@
         "  circle[circle<0] = 0\n",
         "  return circle\n",
         "\n",
-        "def translate_shape_img(img, dx, dy, rotation):\n",
+        "def translate_shape_img(img, dx, dy, rotation, scale=None):\n",
         "  angle: torch.tensor = torch.ones(1, requires_grad=True).to(device) * rotation\n",
         "  center: torch.tensor = torch.ones(1, 2).to(device)\n",
         "  center[..., 0] = img.shape[3] / 2  # x\n",
         "  center[..., 1] = img.shape[2] / 2  # y\n",
-        "  scale =  (torch.tensor([1,1])[None,:]).to(torch.float32).to(device)\n",
+        "  if scale is None:\n",
+        "    scale =  (torch.tensor([1,1])[None,:]).to(torch.float32).to(device)\n",
         "  M: torch.tensor = kornia.geometry.get_rotation_matrix2d(center, angle, scale)  # 1x2x3\n",
         "  _, _, h, w = img.shape\n",
         "  x_rotated: torch.tensor = kornia.geometry.warp_affine(img, M.to(device), dsize=(h, w))\n",
@@ -188,19 +189,20 @@
         "for cid, wh in tqdm.tqdm(enumerate(circles), total=len(circles)):\n",
         "  wh = wh*torch.tensor(size[2:]).to(device)/1.5\n",
         "  dx_, dy_, alpha = torch.rand(3).to(device)\n",
-        "\n",
+        "  \n",
         "  dx = (0.5-dx_)*size[2]\n",
         "  dy = (0.5-dy_)*size[3]\n",
         "  rotation = 180*(0.5 - torch.rand(1).to(device))\n",
-        "  for member in [dx, dy, alpha]:# [dx, dy, rotation, alpha]:\n",
+        "  scale = 2*(torch.rand(2).unsqueeze(0).to(device))\n",
+        "  for member in [dx, dy, rotation, alpha, wh, scale]:\n",
         "    member.requires_grad = True\n",
         "\n",
         "  new_circle = draw_cricle(size, wh)[None,None,...].detach()\n",
-        "  optimizer =  optim.Adam([dx, dy, alpha], lr=0.5) # optim.Adam([dx, dy, alpha, rotation], lr=0.5)\n",
+        "  optimizer = optim.Adam([dx, dy, alpha, rotation, scale], lr=0.5)\n",
         "\n",
         "  for i in range(n_inner_opts):\n",
         "    optimizer.zero_grad()\n",
-        "    new_circle_trans = translate_shape_img(new_circle.clone(), dx, dy, rotation)\n",
+        "    new_circle_trans = translate_shape_img(new_circle.clone(), dx, dy, rotation, scale)\n",
         "    optional_image = torch.clip(add_circle_on_image(image, new_circle_trans, alpha), 0, 1)\n",
         "    tmp_error = criterion(gt_img, optional_image) \n",
         "    tmp_error.backward()\n",
@@ -218,7 +220,7 @@
         "    best_error = tmp_error"
       ],
       "metadata": {
-        "id": "BvL1wfchhkVm"
+        "id": "Anaij-C3gCt5"
       },
       "execution_count": null,
       "outputs": []
